<resources>
    <string name="app_name">GreenLight</string>
    <string name="usuario_ingreso">Escribe tu correo</string>
    <string name="txtBienvenida">Bienvenid@</string>
    <string name="bogot_centro">Bogotá Centro</string>
    <string name="descSuc1">Nuestra primera sucursal y la más grande.</string>
    <string name="carrera_10_34_14">Carrera 13 #34-14</string>
    <string name="todo">TODO</string>
    <string name="tel_7252300">Tel. 7252300</string>
    <string name="calle_22sur_78b_82">Calle 22Sur 78B-82</string>
    <string name="tel_5362047">Tel. 5362047</string>
    <string name="calle_87_11_43">Calle 87 #11-43</string>
    <string name="descSuc2">Nuestra sucursal Kennedy cuenta con 2 pisos.</string>
    <string name="tel_6787606">Tel. 6787606</string>
    <string name="kennedy">Kennedy</string>
    <string name="chic_norte">Chicó Norte</string>
    <string name="descSuc3">Nuestra sucursal del Norte cuenta con instalaciones de alta calidad.</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_contraseña">Contraseña</string>


    <string name="info_text">Información general</string>

    <string name="tel_text">Telefono: 321 2149353</string>






    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GreenLight</string>
    <string name="nav_header_subtitle">greenlight@greenlight.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_close">Cerrar sesión</string>
    <string name="action_buy">Carrito de compras</string>
    <string name="registro_usuarios">Registro de Usuarios</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_hint">Escribe tu nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="contraseña_hint">********</string>
    <string name="contraseña_registro">Escribe tu contraseña</string>
    <string name="correo">E-mail</string>
    <string name="correo_hint">Escribe tu E-mail</string>
    <string name="telefono">Teléfono</string>
    <string name="telefono_hint">Escribe tu teléfono</string>
    <string name="pais">País</string>
    <string name="pais_hint">Escribe tu país</string>
    <string name="ciudad">Ciudad</string>
    <string name="ciudad_hint">Escribe tu ciudad</string>
    <string name="localidad">Localidad</string>
    <string name="localidad_hint">Escribe tu localidad</string>
    <string name="documento">Documento</string>
    <string name="documento_hint">Escribe tu documento</string>
    <string name="btn1_hint">iniciar</string>
    <string name="btn2_hint">Registrar</string>
    <string name="menu_home">Perfiles</string>
    <string name="calendario">Calendario</string>
    <string name="menu_slideshow">Centros de acopio</string>
    <string name="addToFavorite">Se añadió a favoritos</string>
    <string name="btnsqltext1">Listar perfiles</string>
    <string name="opcioncrud">CRUD</string>
    <string name="opcionubicaciones">Ubicaciones</string>



    <string name="BotonRegistrar">Guardar</string>
    <string name="BotonBuscar">Buscar Perfil</string>
    <string name="BotonEliminar">Eliminar</string>
    <string name="BotonModificar">Actualizar</string>
</resources>