<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_info">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.greenlightproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendario"
        android:name="com.example.greenlightproject.ui.gallery.GalleryFragment"
        android:label="@string/calendario"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_sucursales"
        android:name="com.example.greenlightproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.greenlightproject.ui.info.InfoFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_info" />
</navigation>